--- a/projfrontend/src/styles.css
+++ b/projfrontend/src/styles.css
@@ -6,9 +6,9 @@ body {
   background: #3a3f44
 }
 
-footer {
+/* footer {
   position: absolute;
   bottom: 0px;
   left: 0px;
   right: 0px;
-}
+} */
